# webapp-rust-practice

./: Cargo.toml  README.md  build.rs  config.yml  docker-compose.yml  state.json
javascript/: main.js
migrations/2023-11-20-132815_todo_items/: up.sql
migrations/2023-12-07-111608_create_users/: down.sql  up.sql
scripts/: wait_for_database.sh
src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  processes.rs  schema.rs  state.rs
src/json_serialization/: login.rs  login_response.rs  mod.rs  new_user.rs  todo_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/todo/: enums.rs  mod.rs
src/todo/structs/: base.rs  done.rs  mod.rs  pending.rs
src/todo/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/todo/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
