[package]
name = "web-app-practice"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"
clap="*"
serde_json = "1.0.104"
actix-web = "4.3.1"
tokio = { version = "1.30.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.29"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
actix-cors = "0.6.4"
chrono ={version = "0.4.31", features= ["serde"]}
serde_yaml = "0.9.27"
lazy_static = "1.4.0"
bcrypt = "0.15.0"
uuid = {version="1.6.1", features = ["serde", "v4"]}
jsonwebtoken = "9.2.0"
redis = "0.24.0"
env_logger = "0.10.1"

[build-dependencies]
serde_yaml = "0.8.23"
serde = { version = "1.0.136", features = ["derive"] }
